<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SMS-Denúncia</string>
	<string name="denuncia">Selecione o tipo de denúncia:</string>
	<string name="local">Informe o local:</string>
    <string name="infrator">Informe os dados do infrator:</string>
	<string name="sobre">Este programa é software livre.\n\nCódigo disponível em\nhttps://github.com/bani/SMS-Denuncia</string>
	<string name="envio">Edite o texto para fornecer uma descrição do infrator e informações adicionais que ajudem os seguranças a localizá-lo antes de enviar.</string>
	<string name="dVandalismo">Vandalismo</string>
	<string name="dComercio">Comércio Irregular</string>
	<string name="dDelito">Delito</string>
	<string name="dSom">Som Alto</string>
	<string name="dOutra">Outras</string>
	<string name="telefone_trem">+551171504949</string>
	<string name="telefone_metro">+551173332252</string>
	<string-array name="linhas_metro">
		<item>1-Azul</item>
		<item>2-Verde</item>
		<item>3-Vermelha</item>
		<item>4-Amarela</item>
		<item>5-Lilás</item>
	</string-array>
	<string-array name="linhas_trem">
		<item>7-Rubi</item>
		<item>8-Diamante</item>
		<item>9-Esmeralda</item>
		<item>10-Turquesa</item>
		<item>11-Coral</item>
		<item>12-Safira</item>
	</string-array>
	<string-array name="linha1">
		<item>Jabaquara</item>
		<item>Conceição</item>
		<item>São Judas</item>
		<item>Saúde</item>
		<item>Praça da Árvore</item>
		<item>Santa Cruz</item>
		<item>Vila Mariana</item>
		<item>Ana Rosa</item>
		<item>Paraíso</item>
		<item>Vergueiro</item>
		<item>São Joaquim</item>
		<item>Liberdade</item>
		<item>Sé</item>
		<item>São Bento</item>
		<item>Luz</item>
		<item>Tiradentes</item>
		<item>Armênia</item>
		<item>Portuguesa-Tietê</item>
		<item>Carandiru</item>
		<item>Santana</item>
		<item>Jardim São Paulo</item>
		<item>Parada Inglesa</item>
		<item>Tucuruvi</item>
	</string-array>
	<string-array name="linha2">
		<item>Vila Prudente</item>
		<item>Tamanduateí</item>
		<item>Sacomã</item>
		<item>Alto do Ipiranga</item>
		<item>Santos-Imigrantes</item>
		<item>Chácara Klabin</item>
		<item>Ana Rosa</item>
		<item>Paraíso</item>
		<item>Brigadeiro</item>
		<item>Trianon-Masp</item>
		<item>Consolação</item>
		<item>Clínicas</item>
		<item>Sumaré</item>
		<item>Vila Madalena</item>
	</string-array>
	<string-array name="linha3">
		<item>Corinthians-Itaquera</item>
		<item>Artur Alvim</item>
		<item>Patriarca</item>
		<item>Guilhermina-Esperança</item>
		<item>Vila Matilde</item>
		<item>Penha</item>
		<item>Carrão</item>
		<item>Tatuapé</item>
		<item>Belém</item>
		<item>Bresser-Mooca</item>
		<item>Brás</item>
		<item>Pedro II</item>
		<item>Sé</item>
		<item>Anhangabaú</item>
		<item>República</item>
		<item>Santa Cecília</item>
		<item>Marechal Deodoro</item>
		<item>Palmeiras-Barra Funda</item>
	</string-array>
	<string-array name="linha4">
		<item>Butantã</item>
		<item>Pinheiros</item>
		<item>Faria Lima</item>
		<item>Paulista</item>
	</string-array>
	<string-array name="linha5">
		<item>Capão Redondo</item>
		<item>Campo Limpo</item>
		<item>Vila das Belezas</item>
		<item>Giovanni Gronchi</item>
		<item>Santo Amaro</item>
		<item>Largo Treze</item>
	</string-array>
	<string-array name="linha7">
		<item>Luz</item>
		<item>Palmeiras/Barra Funda</item>
		<item>Água Branca</item>
		<item>Lapa</item>
		<item>Piqueri</item>
		<item>Pirituba</item>
		<item>Vila Clarice</item>
		<item>Jaraguá</item>
		<item>Perus</item>
		<item>Caieiras</item>
		<item>Franco da Rocha</item>
		<item>Baltazar Fidelis</item>
		<item>Francisco Morato</item>
		<item>Botujuru</item>
		<item>Campo Limpo Paulista</item>
		<item>Várzea Paulista</item>
		<item>Jundiaí</item>
	</string-array>
	<string-array name="linha8">
		<item>Júlio Prestes</item>
		<item>Palmeiras/Barra Funda</item>
		<item>Lapa</item>
		<item>Domingos de Moraes</item>
		<item>Imperatriz Leopoldina</item>
		<item>Presidente Altino</item>
		<item>Osasco</item>
		<item>Comandante Sampaio</item>
		<item>Quitaúna</item>
		<item>General Miguel Costa</item>
		<item>Carapicuiba</item>
		<item>Santa Terezinha</item>
		<item>Antonio João</item>
		<item>Barueri</item>
		<item>Jardim Belval</item>
		<item>Jardim Silveira</item>
		<item>Jandira</item>
		<item>Sagrado Coração</item>
		<item>Engº. Cardoso</item>
		<item>Itapevi</item>
	</string-array>
	<string-array name="linha9">
		<item>Osasco</item>
		<item>Presidente Altino</item>
		<item>Ceasa</item>
		<item>Villa-Lobos-Jaguaré</item>
		<item>Cidade Universitária</item>
		<item>Pinheiros</item>
		<item>Hebraica-Rebouças</item>
		<item>Cidade Jardim</item>
		<item>Vila Olímpia</item>
		<item>Berrini</item>
		<item>Morumbi</item>
		<item>Granja Julieta</item>
		<item>Santo Amaro</item>
		<item>Socorro</item>
		<item>Jurubatuba</item>
		<item>Autódromo</item>
		<item>Primavera-Interlagos</item>
		<item>Grajaú</item>
	</string-array>
	<string-array name="linha10">
		<item>Luz</item>
		<item>Brás</item>
		<item>Mooca</item>
		<item>Ipiranga</item>
		<item>Tamanduateí</item>
		<item>São Caetano</item>
		<item>Utinga</item>
		<item>Prefeito Saladino</item>
		<item>Pref Celso Daniel Sto André</item>
		<item>Capuava</item>
		<item>Mauá</item>
		<item>Guapituba</item>
		<item>Ribeirão Pires</item>
		<item>Rio Grande da Serra</item>
	</string-array>
	<string-array name="linha11">
		<item>Luz</item>
		<item>Brás</item>
		<item>Tatuapé</item>
		<item>Corinthians/Itaquera</item>
		<item>Dom Bosco</item>
		<item>José Bonifácio</item>
		<item>Guaianazes</item>
		<item>Antonio Gianetti Neto</item>
		<item>Ferraz de Vasconcelos</item>
		<item>Poá</item>
		<item>Calmon Viana</item>
		<item>Suzano</item>
		<item>Jundiapeba</item>
		<item>Brás Cubas</item>
		<item>Mogi das Cruzes</item>
		<item>Estudantes</item>
	</string-array>
	<string-array name="linha12">
		<item>Brás</item>
		<item>Tatuapé</item>
		<item>Engº. Goulart</item>
		<item>USP-Leste</item>
		<item>Comendador Ermelino</item>
		<item>São Miguel Paulista</item>
		<item>Jard. Helena-Vila Mara</item>
		<item>Itaím Paulista</item>
		<item>Jardim Romano</item>
		<item>Engº. Manoel Feio</item>
		<item>Itaquaquecetuba</item>
		<item>Aracaré</item>
		<item>Calmon Viana</item>
	</string-array>
    <string-array name="tons_de_pele">
        <item>Branco</item>
        <item>Pardo</item>
        <item>Negro</item>
        <item>Amarelo</item>
        <item>Vermelho</item>
    </string-array>
    <string-array name="cores_de_roupa">
        <item>Branco</item>
        <item>Amarelo</item>
        <item>Verde</item>
        <item>Preto</item>
        <item>Vermelho</item>
        <item>Vinho</item>
        <item>Azul</item>
        <item>Rosa</item>
        <item>Lilás</item>
    </string-array>
</resources>
