<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/denuncia"
    />
<Button android:id="@+id/denunciaComercio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="@string/dComercio" />
<Button android:id="@+id/denunciaDelito"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="@string/dDelito" />
<Button android:id="@+id/denunciaVandalismo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="@string/dVandalismo" />
<Button android:id="@+id/denunciaOutros"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:text="@string/dOutra" />
</LinearLayout>
